stuck on getting the end screen to show up, found and fixed a ton of spelling errors

--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -104,19 +104,16 @@ li {
     list-style: decimal inside none;
 }
 
-li:nth-child(odd) {
-    background-color: #651c75;
-}
-
 input[type="text"] {
     font-size: 100%;
 }
 
 .feedback {
     font-style: italic;
-    color:black;
+    color:grey;
+    border-top: 2px solid grey;
 }
 
-.hide {
+.hidden {
     display: none;
 }
